--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -1,17 +1,16 @@
-apiVersion: carto.run/v1alpha1
-kind: Workload
+apiVersion: backstage.io/v1alpha1
+kind: Component
 metadata:
-  name: tanzu-java-web-app
-  labels:
-    apps.tanzu.vmware.com/workload-type: web
-    app.kubernetes.io/part-of: tanzu-java-web-app
+ name: atm-locator
+ description: ATM locator search application
+ tags:
+   - tanzu
+ annotations:
+   'backstage.io/kubernetes-label-selector': 'app.kubernetes.io/part-of=atm-locator'
 spec:
-  params:
-  - name: annotations
-    value:
-      autoscaling.knative.dev/minScale: "1"
-  source:
-    git:
-      url: https://github.com/sample-accelerators/tanzu-java-web-app
-      ref:
-        branch: main
+  type: service
+  lifecycle: experimental
+  owner: default-team
+  system: atm-locator
+  providesApis:
+    - atm-locator 
